--- a/Web.Statu/Views/Data/Index.cshtml
+++ b/Web.Statu/Views/Data/Index.cshtml
@@ -100,7 +100,7 @@ try
                 <div class="panel-heading">
                     <div class="row">
                         <div class="col-xs-7 col-sm-8">
-                            <b>@ds.name</b>
+                            <a href="/data/Index/@dsContent.DatasetId"><b>@ds.name</b></a>
                         </div>
                         <div class="col-xs-5 col-sm-4 right">
                             (<b>@recordNum</b> záznamů)
