--- a/Web.Statu/Views/Shared/_Layout.cshtml
+++ b/Web.Statu/Views/Shared/_Layout.cshtml
@@ -146,7 +146,6 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
 
-
     <script>
         var _showFAD = true;
         (function (i, s, o, g, r, a, m) {
@@ -176,6 +175,8 @@
 
 
     </script>
+
+    
 </head>
 <body class="new-body">
     <div id="fb-root"></div>
@@ -256,11 +257,11 @@
                         }
                         nextUrl = System.Net.WebUtility.UrlEncode(nextUrl);
 
-                        <a  onclick="ga('send', 'event', 'loginBtn', 'click','@this.Request.Url.GetComponents(UriComponents.Path, UriFormat.Unescaped)'); return true;" href="/account/Login?returnUrl=@(nextUrl)" id="loginLink">
+                        <a onclick="ga('send', 'event', 'loginBtn', 'click','@this.Request.Url.GetComponents(UriComponents.Path, UriFormat.Unescaped)'); return true;" href="/account/Login?returnUrl=@(nextUrl)" id="loginLink">
                             <img src="/Content/img/icon-user.svg" style="padding-right: 8px;">
                             Přihlášení
                         </a>
-                        <a  onclick="ga('send', 'event', 'registerBtn', 'click','@this.Request.Url.GetComponents(UriComponents.Path, UriFormat.Unescaped)'); return true;" href="/account/Register?nextUrl=@(nextUrl)" id="regLink">Registrace</a>
+                        <a onclick="ga('send', 'event', 'registerBtn', 'click','@this.Request.Url.GetComponents(UriComponents.Path, UriFormat.Unescaped)'); return true;" href="/account/Register?nextUrl=@(nextUrl)" id="regLink">Registrace</a>
                     }
                 </li>
 
@@ -279,13 +280,13 @@
                 <li class="level2">
                     @if (Request.IsAuthenticated)
                     {
-                        <a  onclick="ga('send', 'event', 'bookmarksBtn', 'click','@this.Request.Url.GetComponents(UriComponents.Path, UriFormat.Unescaped)'); return true;" title="Všechny uložené záložky" alt="Všechny uložené záložky" href="/manage/zalozky"><span style="color:#c9302c;" class="bookmark bookmarkOn"></span>Záložky</a>
-                        <a  onclick="ga('send', 'event', 'manageBtn', 'click','@this.Request.Url.GetComponents(UriComponents.Path, UriFormat.Unescaped)'); return true;" href="/manage/" title="Nastavení účtu" alt="Nastavení účtu"><span style="font-family: 'Glyphicons Halflings'" class="glyphicon glyphicon-user"></span>Účet</a>
-                        <a  onclick="ga('send', 'event', 'logoffBtn', 'click','@this.Request.Url.GetComponents(UriComponents.Path, UriFormat.Unescaped)'); return true;" href="/Account/LogOff?rnd=@Guid.NewGuid().ToString("N")">Odhlásit</a>
+                        <a onclick="ga('send', 'event', 'bookmarksBtn', 'click','@this.Request.Url.GetComponents(UriComponents.Path, UriFormat.Unescaped)'); return true;" title="Všechny uložené záložky" alt="Všechny uložené záložky" href="/manage/zalozky"><span style="color:#c9302c;" class="bookmark bookmarkOn"></span>Záložky</a>
+                        <a onclick="ga('send', 'event', 'manageBtn', 'click','@this.Request.Url.GetComponents(UriComponents.Path, UriFormat.Unescaped)'); return true;" href="/manage/" title="Nastavení účtu" alt="Nastavení účtu"><span style="font-family: 'Glyphicons Halflings'" class="glyphicon glyphicon-user"></span>Účet</a>
+                        <a onclick="ga('send', 'event', 'logoffBtn', 'click','@this.Request.Url.GetComponents(UriComponents.Path, UriFormat.Unescaped)'); return true;" href="/Account/LogOff?rnd=@Guid.NewGuid().ToString("N")">Odhlásit</a>
                     }
                     else
                     {
-                        <a  onclick="ga('send', 'event', 'loginBtn', 'click','@this.Request.Url.GetComponents(UriComponents.Path, UriFormat.Unescaped)'); return true;" href="/Account/Login">Přihlášení</a>
+                        <a onclick="ga('send', 'event', 'loginBtn', 'click','@this.Request.Url.GetComponents(UriComponents.Path, UriFormat.Unescaped)'); return true;" href="/Account/Login">Přihlášení</a>
                         <a onclick="ga('send', 'event', 'registerBtn', 'click','@this.Request.Url.GetComponents(UriComponents.Path, UriFormat.Unescaped)'); return true;" href="/account/Register">Registrace</a>
                     }
                 </li>
@@ -384,6 +385,19 @@
 
     @RenderSection("footerscripts", required: false)
 
+    <script src="/Scripts/searchhelper/searchhelper.js"></script>
+    <script>
+
+        var searchFields = [
+            { "value": "ico:", "description": "Vyhledávání podle IČO", "rule": { "regexp": /(^| +AND +| +OR +)$/, "result": true } },
+            { "value": "osobaid:", "description": "Vyhledávání podle id osoby", "rule": { "regexp": /(^| +AND +| +OR +)$/, "result": true } },
+            { "value": "holding:", "description": "Vyhledávání podle IČO holdingu", "rule": { "regexp": /(^| +AND +| +OR +)$/, "result": true } },
+            { "value": "AND ", "description": "Spojení dvou výroků - oba výroky musí být platné", "rule": { "regexp": /(^|[^ ]| +AND +| +OR +)$/, "result": false } },
+            { "value": "OR ", "description": "Spojení dvou výroků - jeden z výroků musí být platný", "rule": { "regexp": /(^|[^ ]| +AND +| +OR +)$/, "result": false } },
+            { "value": " ", "description": "Je potřeba udělat mezeru mezi pravidly", "rule": { "regexp": /[^ ]$/, "result": true } }
+        ]
+        searchhelper(document.getElementById("Q"), searchFields);
+    </script>
 
     <div id="dar-footer-msg">
         @*<div id="ad2" style="display:none;">
@@ -469,7 +483,7 @@
         if (Request.Url.AbsolutePath.ToLower().Contains("insolvence"))
         {
             anontitle = "Insolvence";
-            anonbody = "Podrobné informace o insolvencích jsou dostupné pouze registrovaným uživatelům Hlídače Státu. Registrace je zdarma a je velmi jednoduchá. " 
+            anonbody = "Podrobné informace o insolvencích jsou dostupné pouze registrovaným uživatelům Hlídače Státu. Registrace je zdarma a je velmi jednoduchá. "
                 + "<br/><br/><b>Novináři a datový analytici</b> mají přístup ke všem datům, ostatní pouze k insolvencím, které mají vztah ke kontrole státu a firem a osob s ním obchodujícím.";
         }
 
