--- a/Web.Statu/Views/Dotace/Index.cshtml
+++ b/Web.Statu/Views/Dotace/Index.cshtml
@@ -30,49 +30,87 @@
 
 @Html.Partial("_SearchForm", new HlidacStatu.Lib.ES.DotaceSearchResult())
 
-@*@Html.Action("CachedAction_Child_48H", new { model = Model, NameOfView = "Index.Content" })*@
+<h2>Jak vyhledávat v dotacích</h2>
+<div>
+    <dl>
+        <dt>Hledat všechna zadaná slova v různých tvarech</dt>
+        <dd>
+            <kbd>varhany výstavba</kbd> <a class="small"
+                                        href="/dotace/hledat?Q=varhany+výstavba" target="_blank">
+                Zkusit <i class="fas fa-external-link-alt"></i>
+            </a>
 
-@*<div class="row">
+            <br>Hledá dotace obsahující všechna uvedená slova v různých mluvnických tvarech
+        </dd>
+        <dt>Hledat přesně slovo nebo sousloví</dt>
+        <dd>
+            <kbd>"Stavíme dům"</kbd> <a class="small" href="/dotace/hledat?q=%22Stavíme dům%22"
+                                          target="_blank"><i class="fas fa-external-link-alt"></i></a>
 
-        <div class="col-xs-12">
-            <h2>Nové společnosti v dotacích</h2>
-            @{
-                var spolecnosti = Model.NoveFirmyVInsolvenci;
-            }
+            <br>Hledá dotace obsahující uvedená slova či sousloví přesně jak je v uvozovkách
+        </dd>
+        <dt>Hledat kterékoliv ze zadaných slov</dt>
+        <dd>
+            mezi všechna požadovaná slova vložte operátor OR<br> <kbd>miniaturní OR standardní</kbd> <a class="small"
+                                                                                                    href="/dotace/hledat?Q=miniaturní+OR+standardní" target="_blank">
+                <i class="fas fa-external-link-alt"></i>
+            </a>
 
-            <table class="table table-hover">
-                <thead>
-                    @SearchResults.InsolvenceHead()
-                </thead>
-                <tbody>
-                    @foreach (var item in spolecnosti.Result.Hits.Take(20))
-                    {
-                        @SearchResults.InsolvenceRow(User, Request, item.Source, "")
-                    }
-                </tbody>
-            </table>
+            <br>Hledá dotace obsahující alespoň jedno z uvedených slov
+        </dd>
+        <dt>Toto slovo tam být nesmí</dt>
+        <dd>
+            Před slova, která nechcete, zadejte znaménko mínus<br><kbd>solární -systémy -systém</kbd> <a class="small"
+                                                                                                href="/dotace/hledat?Q=solární+-systémy+-systém" target="_blank">
+                <i class="fas fa-external-link-alt"></i>
+            </a>
 
-        </div>
+            <br>Hledá dotace se slovem solární, kde se zároveň nevyskytují slova "systémy" a "systém"
 
-        <div class="col-xs-12">
-            <h2>Nové osoby v insolvenci</h2>
-            @{
-                var osoby = Model.NoveOsobyVInsolvenci;
-            }
+        </dd>
+        <dt>Kombinace výrazů</dt>
+        <dd>
+            Všechny výše i níže uvedené výrazy hledání je možné kombinovat logickými operátory <kbd>AND</kbd>
+            a <kbd>OR</kbd> (velká písmena jsou nutná).
+            Pokud jsou výrazy odděleny mezerou, je to stejné jako použití operátora <kbd>AND</kbd>.
+        </dd>
+        <dt>Logické a rozšiřující operátory</dt>
+        <dd>
+            Mezi jednotnotlivými částmi dotazu můžete používat operátory <kbd>AND</kbd> a <kbd>OR</kbd>.<br>
+            Můžete používat zástupné znaky (wildcards) <kbd>?</kbd> - zastupuje 1 znak, nebo <kbd>*</kbd>zastupující
+            více znaků. Příklad:<kbd>vila tug*</kbd><br>
+            Příklad: <kbd>ico:00216208 AND penb</kbd>
+        </dd>
 
-            <table class="table table-hover">
-                <thead>
-                    @SearchResults.InsolvenceHead()
-                </thead>
-                <tbody>
-                    @foreach (var item in osoby.Result.Hits.Take(20))
-                    {
-                        @SearchResults.InsolvenceRow(User, Request, item.Source, "")
-                    }
-                </tbody>
-            </table>
-        </div>
-    </div>*@
+    </dl>
+    <h2>Specifické hledání podle konkrétních položek v dotacích</h2>
+
+    <dl>
+        <dt>Prohledávat specifické položky v databázích</dt>
+        <dd>
+            napište prefix s ":" bez mezery následovaný hledanou hodnotou<br><kbd>ico:44992785</kbd>
+            hledá smlouvy kde je jednou ze stran Statutární město Brno (ICO 44992785).
+            <br><br>
+            Pokud hledaná hodnota obsahuje mezery, musí být v uvozovkách <kbd>jmeno:"Ředitelství silnic a dálnic"</kbd>
+        </dd>
+    </dl>
+    <h2>Podporované prefixy / hledatelné položky v DB</h2>
+    <dl>
+        <dt>Fungující v dotacích</dt>
+        <dd>
+            <kbd>ico:12345678</kbd> - jedna ze smluvních stran má uvedené IČO<br>
+            <kbd>osobaid:oznaceni-osoby</kbd> - smlouvy s vazbou na osobu. Oznacení osoby najdete u profilu osoby (např.
+            andrej-babis)<br>
+            <kbd>holding:12345678</kbd> - IČO matky holdingu, hledá se pro všechny firmy holdingu<br>
+            <br>
+            <br>
+            <kbd>projekt:"název projektu"</kbd> - dotace se specifickým názvem projektu (např. "TJ Vodní stavby Tábor")<br>
+            <kbd>jmeno:"jméno příjemce"</kbd> - dotace, kde jméno příjemce odpovídá zadanému výrazu ("Ředitelství silnic a dálnic")<br>
+            <kbd>castka:&gt;castka</kbd> - dotace s částkou vyšší než. Možno použí i <kbd>&gt;=</kbd> <kbd>&lt;=</kbd>
+            <kbd>&lt;</kbd><br>
+        </dd>
+    </dl>
+</div>
 
 <h2>Ukázky možností</h2>
 <ul>
@@ -91,12 +129,6 @@
 
 
 
-@*<div class="bs-callout bs-callout-primary small">
-    <h4>Politici a jejich vazby na firmy</h4>
-    <p>
-        Pro nás relevantní vazba politika na firmu je, že daná osoba byla (spolu)majitelem firmy anebo působila ve statutárním orgánu společnosti v době,
-        kdy byla udělena dotace firmě, kde osoba působila, nebo kde byl tento vztah nepřímý (tzn. firma s politikem vlastnila firmu B, ta firmu C, ktera spadla do insolvence)
-    </p>
-</div>*@
+
 
 
