--- a/Web.Statu/Views/Home/Reports/10_SmlouvyUtajovane.cshtml
+++ b/Web.Statu/Views/Home/Reports/10_SmlouvyUtajovane.cshtml
@@ -13,7 +13,7 @@
     var model = new HlidacStatu.Lib.ES.SmlouvaSearchResult(this.Request.QueryString, HlidacStatu.Lib.ES.SearchTools.OrderResult.DateAddedDesc);
     model.Q = "(issues.issueTypeId:18 OR issues.issueTypeId:12)";
     model = HlidacStatu.Lib.ES.SearchTools.SimpleSearch(model.Q, model.Page,
-100, (HlidacStatu.Lib.ES.SearchTools.OrderResult)(Convert.ToInt32(model.Order)), platnyZaznam: 1);
+100, (HlidacStatu.Lib.ES.SearchTools.OrderResult)(Convert.ToInt32(model.Order)), platnyZaznam: true);
 
     //model.Chyby = true;
 }
