--- a/Web.Statu/Views/Home/Reports/11_SmlouvyUtajovaneSouhrn.cshtml
+++ b/Web.Statu/Views/Home/Reports/11_SmlouvyUtajovaneSouhrn.cshtml
@@ -22,7 +22,7 @@
 
 
     var res = HlidacStatu.Lib.ES.SearchTools.SimpleSearch("(issues.issueTypeId:18 OR issues.issueTypeId:12)", 1, 0,
-        HlidacStatu.Lib.ES.SearchTools.OrderResult.FastestForScroll, aggs, platnyZaznam: 1);
+        HlidacStatu.Lib.ES.SearchTools.OrderResult.FastestForScroll, aggs, platnyZaznam: true);
 
     ReportDataSource rdsPerIco = new ReportDataSource(new ReportDataSource.Column[]
         {
