--- a/Web.Statu/Views/Home/Reports/3_DraheSmlouvySChybami.cshtml
+++ b/Web.Statu/Views/Home/Reports/3_DraheSmlouvySChybami.cshtml
@@ -12,7 +12,7 @@
 
     var model = new HlidacStatu.Lib.ES.SmlouvaSearchResult(this.Request.QueryString);
     model = HlidacStatu.Lib.ES.SearchTools.SimpleSearch("cena:>4999999", model.Page,
-100, (HlidacStatu.Lib.ES.SearchTools.OrderResult)(Convert.ToInt32(model.Order)), platnyZaznam: 1);
+100, (HlidacStatu.Lib.ES.SearchTools.OrderResult)(Convert.ToInt32(model.Order)), platnyZaznam: true);
 
     model.Chyby = true;
     model.ShowWatchdog = false;
