--- a/Web.Statu/Views/Home/Subjekt_Profile.cshtml
+++ b/Web.Statu/Views/Home/Subjekt_Profile.cshtml
@@ -14,10 +14,10 @@
     Layout = null;
 
 
-    var resMinDate = HlidacStatu.Lib.ES.SearchTools.SimpleSearch("ico:" + Model.ICO, 1, 1, HlidacStatu.Lib.ES.SearchTools.OrderResult.DateSignedAsc, platnyZaznam: 1);
+    var resMinDate = HlidacStatu.Lib.ES.SearchTools.SimpleSearch("ico:" + Model.ICO, 1, 1, HlidacStatu.Lib.ES.SearchTools.OrderResult.DateSignedAsc, platnyZaznam: true);
 
     var minMaxDate = HlidacStatu.Lib.ES.SearchTools.SimpleSearch("ico:" + Model.ICO, 1, 0,
-        HlidacStatu.Lib.ES.SearchTools.OrderResult.FastestForScroll, platnyZaznam: 1,
+        HlidacStatu.Lib.ES.SearchTools.OrderResult.FastestForScroll, platnyZaznam: true,
         anyAggregation:
         new Nest.AggregationContainerDescriptor<HlidacStatu.Lib.Data.Smlouva>()
             .Min("min", m => m
