fix verejne zakazky

--- a/Web.Statu/Views/Home/Reports/19_PoradciVlady.cshtml
+++ b/Web.Statu/Views/Home/Reports/19_PoradciVlady.cshtml
@@ -113,7 +113,7 @@ new ReportDataSource.Column() { Name="Sponzor polit.stran",
 <p>
     Hospodářské noviny se <a href="https://domaci.ihned.cz/c1-66100770-kdo-radi-babisovi-polovina-premierovych-poradcu-dela-za-penize-druha-jako-udernici-zdarma-urad-vlady-taji-kolik-komu-dava?utm_source=ihned&utm_medium=otvirak&utm_content=id-66100770">zajímaly o platy poradců na úřadu vlády</a>.
 </p>
-<p>Zde je náš pohled na premierovo poradce, na jejich dary politických stran a zda jejich firmy obchodují se státem. </p>
+<p>Zde je náš pohled na premiérovi poradce, na jejich dary politickým stranám a zda jejich firmy obchodují se státem. </p>
 @UtilChart.RenderReport("", ReportModel.QueueItem.types.table, poslanciTable, @"{
      'language': {
         'url': '//cdn.datatables.net/plug-ins/1.10.19/i18n/Czech.json'
