--- a/Web.Statu/Views/Ucty/Prezidenti.cshtml
+++ b/Web.Statu/Views/Ucty/Prezidenti.cshtml
@@ -48,7 +48,7 @@
 
                     //HlidacStatu.Lib.Data.TransparentniUcty.BankovniUcet bu = ucet.First();
 
-                    var res = HlidacStatu.Lib.ES.Manager.GetESClient_Ucty()
+                    var res = HlidacStatu.Lib.ES.Manager.GetESClient_BankovniPolozky()
                             .Search<HlidacStatu.Lib.Data.TransparentniUcty.BankovniPolozka>(a => a
                                 .Size(15)
                                 .From(0)
