--- a/Web.Statu/Views/Home/Hledat.cshtml
+++ b/Web.Statu/Views/Home/Hledat.cshtml
@@ -168,32 +168,32 @@ else if (Model.HasResults == false)
         <div class="searching__counters">
             @if (Model.HasSmlouvy)
             {
-                <div class="searching__counter"><a class="link--blue link--big" href="@Url.Action("HledatSmlouvy", Model.Smlouvy.ToRouteValues(1))">Smlouvy <span class="new-p new-p--gray">@HlidacStatu.Util.RenderData.NiceNumber(Model.Smlouvy.Total)</span></a></div>
+                <div class="searching__counter"><a class="link--blue link--big" href="@Url.Action("HledatSmlouvy", Model.Smlouvy.ToRouteValues(1))">Smlouvy <span class="new-p new-p--gray">@HlidacStatu.Util.RenderData.NumberOfResults(Model.Smlouvy.Result.HitsMetadata.Total)</span></a></div>
             }
             @if (Model.HasVZ)
             {
-                <div class="searching__counter"><a class="link--blue link--big" href="@Url.Action("Hledat", "VZ",Model.VZ.ToRouteValues(1))">Veřejné zakázky <span class="new-p new-p--gray">@HlidacStatu.Util.RenderData.NiceNumber(Model.VZ.Total)</span></a></div>
+                <div class="searching__counter"><a class="link--blue link--big" href="@Url.Action("Hledat", "VZ",Model.VZ.ToRouteValues(1))">Veřejné zakázky <span class="new-p new-p--gray">@HlidacStatu.Util.RenderData.NumberOfResults(Model.VZ.Result.HitsMetadata.Total)</span></a></div>
             }
             @if (Model.Insolvence.HasResult)
             {
-                <div class="searching__counter"><a class="link--blue link--big" href="#insolvence">Insolvence <span class="new-p new-p--gray">@HlidacStatu.Util.RenderData.NiceNumber(Model.Insolvence.Total)</span></a></div>
+                <div class="searching__counter"><a class="link--blue link--big" href="#insolvence">Insolvence <span class="new-p new-p--gray">@HlidacStatu.Util.RenderData.NumberOfResults(Model.Insolvence.Result.HitsMetadata.Total)</span></a></div>
             }
             @if (Model.HasOsoby)
             {
-                <div class="searching__counter"><a class="link--blue link--big" href="/Osoby?Q=@Url.Encode(Model.Query)&ftx=@Model.OsobaFtx.ToString()">Politici <span class="new-p new-p--gray">@HlidacStatu.Util.RenderData.NiceNumber(Model.Osoby.Total)</span></a></div>
+                <div class="searching__counter"><a class="link--blue link--big" href="/Osoby?Q=@Url.Encode(Model.Query)&ftx=@Model.OsobaFtx.ToString()">Politici <span class="new-p new-p--gray">@HlidacStatu.Util.RenderData.NumberOfResults(Model.Osoby.Total)</span></a></div>
             }
 
             @if (Model.HasTransakce)
             {
-                <div class="searching__counter"><a class="link--blue link--big" href="/Ucty/Hledat?Q=@Url.Encode(Model.Query)">Politické finance <span class="new-p new-p--gray">@HlidacStatu.Util.RenderData.NiceNumber(Model.Transakce.Total)</span></a></div>
+                <div class="searching__counter"><a class="link--blue link--big" href="/Ucty/Hledat?Q=@Url.Encode(Model.Query)">Politické finance <span class="new-p new-p--gray">@HlidacStatu.Util.RenderData.NumberOfResults(Model.Transakce.Total)</span></a></div>
             }
             @if (Model.HasFirmy)
             {
-                <div class="searching__counter"><a class="link--blue link--big" href="#firmy">Firmy <span class="new-p new-p--gray">@(Model.Firmy.Total + (Model.Firmy.Total == HlidacStatu.Lib.Data.Search.FirmyLimit ? "+" : ""))</span></a></div>
+                <div class="searching__counter"><a class="link--blue link--big" href="#firmy">Firmy <span class="new-p new-p--gray">@HlidacStatu.Util.RenderData.NumberOfResults(Model.Firmy.Total + (Model.Firmy.Total == HlidacStatu.Lib.Data.Search.FirmyLimit ? "+" : ""))</span></a></div>
             }
             @if (Model.Datasets.HasResult)
             {
-                <div class="searching__counter"><a class="link--blue link--big" href="#datasets">Další databáze <span class="new-p new-p--gray">@HlidacStatu.Util.RenderData.NiceNumber(Model.Datasets.Total)</span></a></div>
+                <div class="searching__counter"><a class="link--blue link--big" href="#datasets">Další databáze <span class="new-p new-p--gray">@HlidacStatu.Util.RenderData.NumberOfResults(Model.Datasets.Total)</span></a></div>
             }
         </div>
     </div>
